[project]
name = "poster"
version = "0.1.0"
description = "Creates cover for social media platform such as LinkedIn and VCS e.g. github."
readme = "README.md"
authors = [{ email = "ilokeshpawar@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["beartype>=0.21.0", "pillow>=11.3.0", "typer>=0.17.3"]

[project.scripts]
poster = "poster:cli.app"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ipykernel>=6.30.1", "ipywidgets>=8.1.7", "rich>=14.1.0"]
