[project]
name = "poster"
version = "0.1.0"
license = "MIT"
description = "Creates cover for social media platform such as LinkedIn and VCS e.g. github."
readme = "README.md"
authors = [{ name = "Lokesh Pawar", email = "ilokeshpawar@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["beartype>=0.21.0", "pillow>=11.3.0", "typer>=0.17.3"]

[project.scripts]
poster = "poster:cli.app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
assets = "assets/"
config = "config/"

[dependency-groups]
dev = ["ipykernel>=6.30.1", "ipywidgets>=8.1.7", "rich>=14.1.0"]
